[gd_scene load_steps=4 format=2]

[ext_resource path="res://menu/main/LevelSelector.gd" type="Script" id=1]
[ext_resource path="res://menu/main/insert-coin.tres" type="Theme" id=2]
[ext_resource path="res://menu/main/img/btnLeft.png" type="Texture" id=3]
[ext_resource path="res://menu/main/img/btnRight.png" type="Texture" id=4]





[node name="LevelSelector" type="Node2D"]

script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]

focus_ignore_mouse = true
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
margin_left = -39.0
margin_top = -16.0
margin_right = 40.0
margin_bottom = 16.0
text = "01"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="BtnLeft" type="TextureButton" parent="."]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = -72.0
margin_top = -16.0
margin_right = -40.0
margin_bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 3 )

[node name="BtnRight" type="TextureButton" parent="."]

focus_ignore_mouse = false
focus_stop_mouse = true
size_flags_horizontal = 2
size_flags_vertical = 2
margin_left = 41.0
margin_top = -16.0
margin_right = 73.0
margin_bottom = 16.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
texture_normal = ExtResource( 4 )

[connection signal="pressed"  from="BtnLeft"  to="." method="_on_BtnLeft_pressed" binds=[  ]]

[connection signal="pressed"  from="BtnRight"  to="." method="_on_BtnRight_pressed" binds=[  ]]
